--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 <h1>Teste</h1>
+  <div>
+    <input type="text" name="nome" value="" placeholder="O que vamos fazer hoje?" />
+
+
+    
+  </div>
   
 </body>
 </html>
